minor style fixes z-index social nav

--- a/src/snippets/_footer.scss
+++ b/src/snippets/_footer.scss
@@ -1,3 +1,14 @@
 .footer {
   background-color: $tertiary;
+  padding: 3rem 1.5rem;
+
+  a {
+    @include mobile {
+      display: block;
+    }
+  }
+
+  .creative-playground & {
+    background-color: transparent;
+  }
 }
