--- a/src/snippets/_socialnav.scss
+++ b/src/snippets/_socialnav.scss
@@ -2,6 +2,7 @@
   .socialnav {
     bottom: 0;
     position: fixed;
+    z-index: 3;
 
     ol {
       align-items: center;
